# adk-web-api

./: .gitignore  Dockerfile  README.md  main.py  makefile  pyproject.toml  requirements.txt  test.py
deployment/: local.py  remote.py
repeat/: agent.py
response_agent/: agent.py
